--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -87,7 +87,7 @@ spec:
           value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.provisioningUser }};Password=$(PROVISIONING_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
           {{- end }}
         - name: "APPMARKETPLACE__ACTIVEAPPCOMPANYADMINROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "APPMARKETPLACE__ACTIVEAPPCOMPANYADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.activeAppCompanyAdminRoles.role0 }}"
         - name: "APPMARKETPLACE__ACTIVEAPPCOMPANYADMINROLES__0__USERROLENAMES__1"
@@ -111,7 +111,7 @@ spec:
         - name: "APPMARKETPLACE__APPROVEAPPNOTIFICATIONTYPEIDS__0"
           value: "{{ .Values.backend.appmarketplace.approveAppNotificationTypeIds.type0 }}"
         - name: "APPMARKETPLACE__APPROVEAPPUSERROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "APPMARKETPLACE__APPROVEAPPUSERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.approveAppUserRoles.role0 }}"
         - name: "APPMARKETPLACE__APPROVEAPPUSERROLES__0__USERROLENAMES__1"
@@ -125,7 +125,7 @@ spec:
         - name: "APPMARKETPLACE__USERMANAGEMENTADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.userManagementPath }}"
         - name: "APPMARKETPLACE__CATENAADMINROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "APPMARKETPLACE__CATENAADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.catenaAdminRoles.role0 }}"
         - name: "APPMARKETPLACE__UPLOADAPPDOCUMENTTYPEIDS__0__DOCUMENTTYPEID"
@@ -213,11 +213,11 @@ spec:
         - name: "APPMARKETPLACE__UPLOADACTIVEAPPDOCUMENTTYPEIDS__3__MEDIATYPES__0"
           value: "{{ .Values.backend.appmarketplace.uploadActiveAppDocumentTypeIds.mediaTypeIds3.mediaTypeId0 }}"
         - name: "APPMARKETPLACE__ITADMINROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "APPMARKETPLACE__ITADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.ITAdminRoles.role0 }}"
         - name: "APPMARKETPLACE__ACTIVATIONUSERROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "APPMARKETPLACE__ACTIVATIONUSERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.activationUserRoles.role0 }}"
         - name: "APPMARKETPLACE__ACTIVATIONUSERROLES__0__USERROLENAMES__1"
@@ -229,19 +229,19 @@ spec:
         - name: "APPMARKETPLACE__OFFERSTATUSIDS__1"
           value: "{{ .Values.backend.appmarketplace.offerStatusIds.status1 }}"
         - name: "APPMARKETPLACE__SALESMANAGERROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "APPMARKETPLACE__SALESMANAGERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.salesManagerRoles.role0 }}"
         - name: "APPMARKETPLACE__SERVICEACCOUNTROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.technicalRolesManagement }}"
+          value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
         - name: "APPMARKETPLACE__SERVICEACCOUNTROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.serviceAccountRoles.role0 }}"
         - name: "APPMARKETPLACE__SERVICEMANAGERROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "APPMARKETPLACE__SERVICEMANAGERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.serviceManagerRoles.role0 }}"
         - name: "APPMARKETPLACE__SUBSCRIPTIONMANAGERROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "APPMARKETPLACE__SUBSCRIPTIONMANAGERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.subscriptionManagerRoles.role0 }}"
         - name: "APPMARKETPLACE__SUBSCRIPTIONMANAGERROLES__0__USERROLENAMES__1"
@@ -251,7 +251,7 @@ spec:
         - name: "APPMARKETPLACE__TECHNICALUSERPROFILECLIENT"
           value: "{{ .Values.backend.appmarketplace.technicalUserProfileClient }}"
         - name: "APPMARKETPLACE__COMPANYADMINROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "APPMARKETPLACE__COMPANYADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.appmarketplace.companyAdminRoles.role0 }}"
         - name: "HEALTHCHECKS__0__PATH"
@@ -264,17 +264,17 @@ spec:
         - name: "HEALTHCHECKS__2__PATH"
           value: "{{ .Values.backend.healthChecks.liveness.path}}"
         - name: "JWTBEAREROPTIONS__METADATAADDRESS"
-          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.metadataPath }}"
+          value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.jwtBearerOptions.metadataPath }}"
         - name: "JWTBEAREROPTIONS__REQUIREHTTPSMETADATA"
           value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.requireHttpsMetadata }}"
         - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDAUDIENCE"
           value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validAudiencePortal }}"
         - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDISSUER"
-          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validIssuerPath }}"
+          value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validIssuerPath }}"
         - name: "JWTBEAREROPTIONS__REFRESHINTERVAL"
           value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.refreshInterval }}"
         - name: "KEYCLOAK__CENTRAL__AUTHREALM"
-          value: "{{ .Values.backend.keycloak.central.authRealm }}"
+          value: "{{ .Values.centralidp.realm }}"
         - name: "KEYCLOAK__CENTRAL__CLIENTID"
           value: "{{ .Values.backend.keycloak.central.clientId }}"
         - name: "KEYCLOAK__CENTRAL__CLIENTSECRET"
@@ -283,7 +283,7 @@ spec:
               name: "{{ .Values.backend.keycloak.secret }}"
               key: "central-client-secret"
         - name: "KEYCLOAK__CENTRAL__CONNECTIONSTRING"
-          value: "{{ .Values.centralidpAddress }}"
+          value: "{{ .Values.centralidp.address }}"
         - name: "KEYCLOAK__CENTRAL__USEAUTHTRAIL"
           value: "{{ .Values.backend.keycloak.central.useAuthTrail }}"
         - name: "KEYCLOAK__SHARED__AUTHREALM"
@@ -319,7 +319,7 @@ spec:
         - name: "MAILINGSERVICE__MAIL__SENDEREMAIL"
           value: "{{ .Values.backend.mailing.senderEmail }}"
         - name: "PROVISIONING__CENTRALREALM"
-          value: "{{ .Values.backend.provisioning.centralRealm }}"
+          value: "{{ .Values.centralidp.realm }}"
         - name: "PROVISIONING__CENTRALREALMID"
           value: "{{ .Values.backend.provisioning.centralRealmId }}"
         - name: "SWAGGERENABLED"
