--- a/consortia/environments/values-beta.yaml
+++ b/consortia/environments/values-beta.yaml
@@ -19,7 +19,8 @@
 
 portalAddress: "https://portal.beta.demo.catena-x.net"
 portalBackendAddress: "https://portal-backend.beta.demo.catena-x.net"
-centralidpAddress: "https://centralidp.beta.demo.catena-x.net"
+centralidp:
+  address: "https://centralidp.beta.demo.catena-x.net"
 sharedidpAddress: "https://sharedidp.beta.demo.catena-x.net"
 semanticsAddress: "https://semantics.beta.demo.catena-x.net"
 bpdmPartnersPoolAddress: "https://business-partners.beta.demo.catena-x.net"
