--- a/consortia/environments/values-dev.yaml
+++ b/consortia/environments/values-dev.yaml
@@ -19,7 +19,8 @@
 
 portalAddress: "https://portal.dev.demo.catena-x.net"
 portalBackendAddress: "https://portal-backend.dev.demo.catena-x.net"
-centralidpAddress: "https://centralidp.dev.demo.catena-x.net"
+centralidp:
+  address: "https://centralidp.dev.demo.catena-x.net"
 sharedidpAddress: "https://sharedidp.dev.demo.catena-x.net"
 semanticsAddress: "https://semantics.dev.demo.catena-x.net"
 bpdmPartnersPoolAddress: "https://business-partners.dev.demo.catena-x.net"
