--- a/consortia/environments/values-pen.yaml
+++ b/consortia/environments/values-pen.yaml
@@ -19,7 +19,8 @@
 
 portalAddress: "https://portal-pen.dev.demo.catena-x.net"
 portalBackendAddress: "https://portal-backend-pen.dev.demo.catena-x.net"
-centralidpAddress: "https://centralidp-pen.dev.demo.catena-x.net"
+centralidp:
+  address: "https://centralidp-pen.dev.demo.catena-x.net"
 sharedidpAddress: "https://sharedidp-pen.dev.demo.catena-x.net"
 semanticsAddress: "https://semantics-pen.dev.demo.catena-x.net"
 bpdmPartnersPoolAddress: "https://business-partners-pen.dev.demo.catena-x.net"
