--- a/consortia/environments/values-rc.yaml
+++ b/consortia/environments/values-rc.yaml
@@ -19,7 +19,8 @@
 
 portalAddress: "https://portal-rc.dev.demo.catena-x.net"
 portalBackendAddress: "https://portal-backend-rc.dev.demo.catena-x.net"
-centralidpAddress: "https://centralidp-rc.dev.demo.catena-x.net"
+centralidp:
+  address: "https://centralidp-rc.dev.demo.catena-x.net"
 sharedidpAddress: "https://sharedidp-rc.dev.demo.catena-x.net"
 semanticsAddress: "https://semantics.dev.demo.catena-x.net"
 bpdmPartnersPoolAddress: "https://business-partners.dev.demo.catena-x.net"
