--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -81,7 +81,7 @@ spec:
               value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.provisioningUser }};Password=$(PROVISIONING_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
             {{- end }}
             - name: "APPLICATIONACTIVATION__APPLICATIONAPPROVALINITIALROLES__0__CLIENTID"
-              value: "{{ .Values.backend.clients.portal }}"
+              value: "{{ .Values.centralidp.clients.portal }}"
             - name: "APPLICATIONACTIVATION__APPLICATIONAPPROVALINITIALROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.processesworker.applicationActivation.applicationApprovalInitialRoles.portal.role0 }}"
             - name: "APPLICATIONACTIVATION__CLIENTTOREMOVEROLESONACTIVATION__0"
@@ -89,7 +89,7 @@ spec:
             - name: "APPLICATIONACTIVATION__BASEPORTALADDRESS"
               value: "{{ .Values.portalAddress }}"
             - name: "APPLICATIONACTIVATION__COMPANYADMINROLES__0__CLIENTID"
-              value: "{{ .Values.backend.clients.registration }}"
+              value: "{{ .Values.centralidp.clients.registration }}"
             - name: "APPLICATIONACTIVATION__COMPANYADMINROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.processesworker.applicationActivation.applicationApprovalInitialRoles.registration.role0 }}"
             - name: "APPLICATIONACTIVATION__WELCOMENOTIFICATIONTYPEIDS__0"
@@ -124,7 +124,7 @@ spec:
             - name: "APPLICATIONCHECKLIST__BPDM__GRANTTYPE"
               value: "{{ .Values.backend.processesworker.bpdm.grantType }}"
             - name: "APPLICATIONCHECKLIST__BPDM__TOKENADDRESS"
-              value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
+              value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.tokenPath }}"
             - name: "APPLICATIONCHECKLIST__BPDM__PASSWORD"
               value: "{{ .Values.backend.placeholder }}"
             - name: "APPLICATIONCHECKLIST__BPDM__SCOPE"
@@ -166,7 +166,7 @@ spec:
             - name: "APPLICATIONCHECKLIST__CUSTODIAN__GRANTTYPE"
               value: "{{ .Values.backend.processesworker.custodian.grantType }}"
             - name: "APPLICATIONCHECKLIST__CUSTODIAN__TOKENADDRESS"
-              value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
+              value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.tokenPath }}"
             - name: "APPLICATIONCHECKLIST__CUSTODIAN__PASSWORD"
               value: "{{ .Values.backend.placeholder }}"
             - name: "APPLICATIONCHECKLIST__CUSTODIAN__SCOPE"
@@ -183,7 +183,7 @@ spec:
             - name: "APPLICATIONCHECKLIST__SDFACTORY__GRANTTYPE"
               value: "{{ .Values.backend.processesworker.sdfactory.grantType }}"
             - name: "APPLICATIONCHECKLIST__SDFACTORY__TOKENADDRESS"
-              value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
+              value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.tokenPath }}"
             - name: "APPLICATIONCHECKLIST__SDFACTORY__PASSWORD"
               value: "{{ .Values.backend.placeholder }}"
             - name: "APPLICATIONCHECKLIST__SDFACTORY__SCOPE"
@@ -210,7 +210,7 @@ spec:
             - name: "APPLICATIONCHECKLIST__DIM__SCOPE"
               value: "{{ .Values.backend.processesworker.dim.scope }}"
             - name: "APPLICATIONCHECKLIST__DIM__TOKENADDRESS"
-              value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
+              value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.tokenPath }}"
             - name: "APPLICATIONCHECKLIST__DIM__BASEADDRESS"
               value: "{{ .Values.backend.processesworker.dim.baseAddress }}"
             - name: "APPLICATIONCHECKLIST__DIM__UNIVERSALRESOLVERADDRESS"
@@ -233,7 +233,7 @@ spec:
             - name: "APPLICATIONCHECKLIST__DIM__ENCRYPTIONCONFIGS__0__PADDINGMODE"
               value: "{{ .Values.backend.processesworker.dim.encryptionConfigs.index0.paddingMode }}"
             - name: "KEYCLOAK__CENTRAL__AUTHREALM"
-              value: "{{ .Values.backend.keycloak.central.authRealm }}"
+              value: "{{ .Values.centralidp.realm }}"
             - name: "KEYCLOAK__CENTRAL__CLIENTID"
               value: "{{ .Values.backend.keycloak.central.clientId }}"
             - name: "KEYCLOAK__CENTRAL__CLIENTSECRET"
@@ -242,7 +242,7 @@ spec:
                   name: "{{ .Values.backend.keycloak.secret }}"
                   key: "central-client-secret"
             - name: "KEYCLOAK__CENTRAL__CONNECTIONSTRING"
-              value: "{{ .Values.centralidpAddress }}"
+              value: "{{ .Values.centralidp.address }}"
             - name: "KEYCLOAK__CENTRAL__USEAUTHTRAIL"
               value: "{{ .Values.backend.keycloak.central.useAuthTrail }}"
             - name: "KEYCLOAK__SHARED__AUTHREALM"
@@ -284,7 +284,7 @@ spec:
             - name: "MAILINGSERVICE__MAIL__SMTPUSER"
               value: "{{ .Values.backend.mailing.user }}"
             - name: "NETWORKREGISTRATION__INITIALROLES__0__CLIENTID"
-              value: "{{ .Values.backend.clients.registration }}"
+              value: "{{ .Values.centralidp.clients.registration }}"
             - name: "NETWORKREGISTRATION__INITIALROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.provisioning.invitedUserInitialRoles.registration }}"
             - name: "NETWORKREGISTRATION__BASEPORTALADDRESS"
@@ -306,11 +306,11 @@ spec:
             - name: "PROVISIONING__CENTRALIDENTITYPROVIDER__CONFIG__CLIENTID"
               value: "{{ .Values.backend.provisioning.centralIdentityProvider.clientId }}"
             - name: "PROVISIONING__CENTRALREALM"
-              value: "{{ .Values.backend.provisioning.centralRealm }}"
+              value: "{{ .Values.centralidp.realm }}"
             - name: "PROVISIONING__CENTRALREALMID"
               value: "{{ .Values.backend.provisioning.centralRealmId }}"
             - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__CLIENTID"
-              value: "{{ .Values.backend.clients.registration }}"
+              value: "{{ .Values.centralidp.clients.registration }}"
             # -- if the array is extended please extend NETWORKREGISTRATION__INITIALROLES as well
             - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.provisioning.invitedUserInitialRoles.registration }}"
@@ -338,19 +338,19 @@ spec:
             - name: "OFFERSUBSCRIPTIONPROCESS__BASEPORTALADDRESS"
               value: "{{ .Values.portalAddress }}{{ .Values.backend.portalHomePath }}"
             - name: "OFFERSUBSCRIPTIONPROCESS__SERVICEACCOUNTROLES__0__CLIENTID"
-              value: "{{ .Values.backend.clients.technicalRolesManagement }}"
+              value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
             - name: "OFFERSUBSCRIPTIONPROCESS__SERVICEACCOUNTROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.processesworker.offerSubscriptionProcess.serviceAccountRoles.role0 }}"
             - name: "OFFERSUBSCRIPTIONPROCESS__SERVICEMANAGERROLES__0__CLIENTID"
-              value: "{{ .Values.backend.clients.portal }}"
+              value: "{{ .Values.centralidp.clients.portal }}"
             - name: "OFFERSUBSCRIPTIONPROCESS__SERVICEMANAGERROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.processesworker.offerSubscriptionProcess.serviceManagerRoles.role0 }}"
             - name: "OFFERSUBSCRIPTIONPROCESS__ITADMINROLES__0__CLIENTID"
-              value: "{{ .Values.backend.clients.portal }}"
+              value: "{{ .Values.centralidp.clients.portal }}"
             - name: "OFFERSUBSCRIPTIONPROCESS__ITADMINROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.processesworker.offerSubscriptionProcess.itAdminRoles.role0 }}"
             - name: "OFFERPROVIDER__SERVICEMANAGERROLES__0__CLIENTID"
-              value: "{{ .Values.backend.clients.portal }}"
+              value: "{{ .Values.centralidp.clients.portal }}"
             - name: "OFFERPROVIDER__SERVICEMANAGERROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.processesworker.offerprovider.serviceManagerRoles.role0 }}"
             - name: "OFFERPROVIDER__CLIENTID"
@@ -363,7 +363,7 @@ spec:
             - name: "OFFERPROVIDER__GRANTTYPE"
               value: "{{ .Values.backend.processesworker.offerprovider.grantType }}"
             - name: "OFFERPROVIDER__TOKENADDRESS"
-              value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
+              value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.tokenPath }}"
             - name: "OFFERPROVIDER__PASSWORD"
               value: "{{ .Values.backend.placeholder }}"
             - name: "OFFERPROVIDER__SCOPE"
@@ -397,7 +397,7 @@ spec:
                   name: "{{ .Values.backend.interfaces.secret }}"
                   key: "onboardingserviceprovider-encryption-key1"
             - name: "INVITATION__INVITEDUSERINITIALROLES__0__CLIENTID"
-              value: "{{ .Values.backend.clients.registration }}"
+              value: "{{ .Values.centralidp.clients.registration }}"
             - name: "INVITATION__INVITEDUSERINITIALROLES__0__USERROLENAMES__0"
               value: "{{ .Values.backend.processesworker.invitation.invitedUserInitialRoles.role0 }}"
             - name: "INVITATION__REGISTRATIONAPPADDRESS"
