--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -115,7 +115,7 @@ spec:
         - name: "APPLICATIONCHECKLIST__BPDM__GRANTTYPE"
           value: "{{ .Values.backend.processesworker.bpdm.grantType }}"
         - name: "APPLICATIONCHECKLIST__BPDM__TOKENADDRESS"
-          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
+          value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.tokenPath }}"
         - name: "APPLICATIONCHECKLIST__BPDM__PASSWORD"
           value: "{{ .Values.backend.placeholder }}"
         - name: "APPLICATIONCHECKLIST__BPDM__SCOPE"
@@ -157,7 +157,7 @@ spec:
         - name: "APPLICATIONCHECKLIST__CUSTODIAN__GRANTTYPE"
           value: "{{ .Values.backend.processesworker.custodian.grantType }}"
         - name: "APPLICATIONCHECKLIST__CUSTODIAN__TOKENADDRESS"
-          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
+          value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.tokenPath }}"
         - name: "APPLICATIONCHECKLIST__CUSTODIAN__PASSWORD"
           value: "{{ .Values.backend.placeholder }}"
         - name: "APPLICATIONCHECKLIST__CUSTODIAN__SCOPE"
@@ -174,7 +174,7 @@ spec:
         - name: "APPLICATIONCHECKLIST__SDFACTORY__GRANTTYPE"
           value: "{{ .Values.backend.processesworker.sdfactory.grantType }}"
         - name: "APPLICATIONCHECKLIST__SDFACTORY__TOKENADDRESS"
-          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
+          value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.tokenPath }}"
         - name: "APPLICATIONCHECKLIST__SDFACTORY__PASSWORD"
           value: "{{ .Values.backend.placeholder }}"
         - name: "APPLICATIONCHECKLIST__SDFACTORY__SCOPE"
@@ -201,7 +201,7 @@ spec:
         - name: "APPLICATIONCHECKLIST__DIM__SCOPE"
           value: "{{ .Values.backend.processesworker.dim.scope }}"
         - name: "APPLICATIONCHECKLIST__DIM__TOKENADDRESS"
-          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.tokenPath }}"
+          value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.tokenPath }}"
         - name: "APPLICATIONCHECKLIST__DIM__BASEADDRESS"
           value: "{{ .Values.backend.processesworker.dim.baseAddress }}"
         - name: "APPLICATIONCHECKLIST__DIM__UNIVERSALRESOLVERADDRESS"
@@ -275,29 +275,29 @@ spec:
         - name: "IDENTITYPROVIDERADMIN__CSVSETTINGS__SEPARATOR"
           value: "{{ .Values.backend.administration.identityProviderAdmin.csvSettings.separator }}"
         - name: "IDENTITYPROVIDERADMIN__DELETEIDPROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "IDENTITYPROVIDERADMIN__DELETEIDPROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.administration.identityProviderAdmin.deleteIdpRoles.role0 }}"
         - name: "IDENTITYPROVIDERADMIN__DELETEIDPROLES__0__USERROLENAMES__1"
           value: "{{ .Values.backend.administration.identityProviderAdmin.deleteIdpRoles.role1 }}"
         - name: "IDENTITYPROVIDERADMIN__DEACTIVATEIDPROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "IDENTITYPROVIDERADMIN__DEACTIVATEIDPROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.administration.identityProviderAdmin.deactivateIdpRoles.role0 }}"
         - name: "IDENTITYPROVIDERADMIN__DEACTIVATEIDPROLES__0__USERROLENAMES__1"
           value: "{{ .Values.backend.administration.identityProviderAdmin.deactivateIdpRoles.role1 }}"
         - name: "JWTBEAREROPTIONS__METADATAADDRESS"
-          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.metadataPath }}"
+          value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.jwtBearerOptions.metadataPath }}"
         - name: "JWTBEAREROPTIONS__REQUIREHTTPSMETADATA"
           value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.requireHttpsMetadata }}"
         - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDAUDIENCE"
           value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validAudiencePortal }}"
         - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDISSUER"
-          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validIssuerPath }}"
+          value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validIssuerPath }}"
         - name: "JWTBEAREROPTIONS__REFRESHINTERVAL"
           value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.refreshInterval }}"
         - name: "KEYCLOAK__CENTRAL__AUTHREALM"
-          value: "{{ .Values.backend.keycloak.central.authRealm }}"
+          value: "{{ .Values.centralidp.realm }}"
         - name: "KEYCLOAK__CENTRAL__CLIENTID"
           value: "{{ .Values.backend.keycloak.central.clientId }}"
         - name: "KEYCLOAK__CENTRAL__CLIENTSECRET"
@@ -306,7 +306,7 @@ spec:
               name: "{{ .Values.backend.keycloak.secret }}"
               key: "central-client-secret"
         - name: "KEYCLOAK__CENTRAL__CONNECTIONSTRING"
-          value: "{{ .Values.centralidpAddress }}"
+          value: "{{ .Values.centralidp.address }}"
         - name: "KEYCLOAK__CENTRAL__USEAUTHTRAIL"
           value: "{{ .Values.backend.keycloak.central.useAuthTrail }}"
         - name: "KEYCLOAK__SHARED__AUTHREALM"
@@ -333,7 +333,7 @@ spec:
         - name: "SERILOG__MINIMUMLEVEL__OVERRIDE__Org.Eclipse.TractusX.Portal.Backend.Bpdm.Library"
           value: "{{ .Values.backend.administration.logging.bpdmLibrary }}"
         - name: "NETWORK2NETWORK__INITIALROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.registration }}"
+          value: "{{ .Values.centralidp.clients.registration }}"
         - name: "NETWORK2NETWORK__INITIALROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.provisioning.invitedUserInitialRoles.registration }}"
         - name: "NETWORK2NETWORK__BASEPORTALADDRESS"
@@ -365,11 +365,11 @@ spec:
         - name: "PROVISIONING__CENTRALIDENTITYPROVIDER__CONFIG__CLIENTID"
           value: "{{ .Values.backend.provisioning.centralIdentityProvider.clientId }}"
         - name: "PROVISIONING__CENTRALREALM"
-          value: "{{ .Values.backend.provisioning.centralRealm }}"
+          value: "{{ .Values.centralidp.realm }}"
         - name: "PROVISIONING__CENTRALREALMID"
           value: "{{ .Values.backend.provisioning.centralRealmId }}"
         - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.registration }}"
+          value: "{{ .Values.centralidp.clients.registration }}"
         # -- if the array is extended please extend NETWORK2NETWORK__INITIALROLES as well
         - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.provisioning.invitedUserInitialRoles.registration }}"
@@ -407,7 +407,7 @@ spec:
         - name: "USERMANAGEMENT__COMPANYUSERSTATUSIDS__1"
           value: "{{ .Values.backend.administration.userManagement.companyUserStatusIds.status1 }}"
         - name: "USERMANAGEMENT__USERADMINROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "USERMANAGEMENT__USERADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.administration.userManagement.userAdminRoles.role0 }}"
         - name: "USERMANAGEMENT__USERADMINROLES__0__USERROLENAMES__1"
@@ -417,7 +417,7 @@ spec:
         - name: "USERMANAGEMENT__PORTAL__PASSWORDRESENDADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.portalPasswordResendPath }}"
         - name: "USERMANAGEMENT__PORTAL__KEYCLOAKCLIENTID"
-          value: "{{ .Values.backend.administration.keycloakClientId }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGINDEX"
           value: "{{ .Values.backend.processesworker.mailing.encryptionConfigIndex }}"
         - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGS__0__INDEX"
