--- a/charts/portal/templates/deployment-backend-registration.yaml
+++ b/charts/portal/templates/deployment-backend-registration.yaml
@@ -104,17 +104,17 @@ spec:
         - name: "HEALTHCHECKS__2__PATH"
           value: "{{ .Values.backend.healthChecks.liveness.path}}"
         - name: "JWTBEAREROPTIONS__METADATAADDRESS"
-          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.metadataPath }}"
+          value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.jwtBearerOptions.metadataPath }}"
         - name: "JWTBEAREROPTIONS__REQUIREHTTPSMETADATA"
           value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.requireHttpsMetadata }}"
         - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDAUDIENCE"
           value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validAudienceRegistration }}"
         - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDISSUER"
-          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validIssuerPath }}"
+          value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validIssuerPath }}"
         - name: "JWTBEAREROPTIONS__REFRESHINTERVAL"
           value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.refreshInterval }}"
         - name: "KEYCLOAK__CENTRAL__AUTHREALM"
-          value: "{{ .Values.backend.keycloak.central.authRealm }}"
+          value: "{{ .Values.centralidp.realm }}"
         - name: "KEYCLOAK__CENTRAL__CLIENTID"
           value: "{{ .Values.backend.keycloak.central.clientId }}"
         - name: "KEYCLOAK__CENTRAL__CLIENTSECRET"
@@ -123,7 +123,7 @@ spec:
               name: "{{ .Values.backend.keycloak.secret }}"
               key: "central-client-secret"
         - name: "KEYCLOAK__CENTRAL__CONNECTIONSTRING"
-          value: "{{ .Values.centralidpAddress }}"
+          value: "{{ .Values.centralidp.address }}"
         - name: "KEYCLOAK__CENTRAL__USEAUTHTRAIL"
           value: "{{ .Values.backend.keycloak.central.useAuthTrail }}"
         - name: "KEYCLOAK__SHARED__AUTHREALM"
@@ -148,9 +148,9 @@ spec:
         - name: "MVC_ROUTING_BASEPATH"
           value: "{{ .Values.backend.registration.basePath }}"
         - name: "PROVISIONING__CENTRALREALM"
-          value: "{{ .Values.backend.provisioning.centralRealm }}"
+          value: "{{ .Values.centralidp.realm }}"
         - name: "PROVISIONING__INVITEDUSERINITIALROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.registration }}"
+          value: "{{ .Values.centralidp.clients.registration }}"
         - name: "APPMARKETPLACE__SERVICEMANAGERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.provisioning.invitedUserInitialRoles.registration }}"
         - name: "PROVISIONING__SERVICEACCOUNTCLIENTPREFIX"
