--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -96,17 +96,17 @@ spec:
         - name: "HEALTHCHECKS__2__PATH"
           value: "{{ .Values.backend.healthChecks.liveness.path}}"
         - name: "JWTBEAREROPTIONS__METADATAADDRESS"
-          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.metadataPath }}"
+          value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.jwtBearerOptions.metadataPath }}"
         - name: "JWTBEAREROPTIONS__REQUIREHTTPSMETADATA"
           value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.requireHttpsMetadata }}"
         - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDAUDIENCE"
           value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validAudiencePortal }}"
         - name: "JWTBEAREROPTIONS__TOKENVALIDATIONPARAMETERS__VALIDISSUER"
-          value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validIssuerPath }}"
+          value: "{{ .Values.centralidp.address }}{{ .Values.backend.keycloak.central.jwtBearerOptions.tokenValidationParameters.validIssuerPath }}"
         - name: "JWTBEAREROPTIONS__REFRESHINTERVAL"
           value: "{{ .Values.backend.keycloak.central.jwtBearerOptions.refreshInterval }}"
         - name: "KEYCLOAK__CENTRAL__AUTHREALM"
-          value: "{{ .Values.backend.keycloak.central.authRealm }}"
+          value: "{{ .Values.centralidp.realm }}"
         - name: "KEYCLOAK__CENTRAL__CLIENTID"
           value: "{{ .Values.backend.keycloak.central.clientId }}"
         - name: "KEYCLOAK__CENTRAL__CLIENTSECRET"
@@ -115,7 +115,7 @@ spec:
               name: "{{ .Values.backend.keycloak.secret }}"
               key: "central-client-secret"
         - name: "KEYCLOAK__CENTRAL__CONNECTIONSTRING"
-          value: "{{ .Values.centralidpAddress }}"
+          value: "{{ .Values.centralidp.address }}"
         - name: "KEYCLOAK__CENTRAL__USEAUTHTRAIL"
           value: "{{ .Values.backend.keycloak.central.useAuthTrail }}"
         - name: "KEYCLOAK__SHARED__AUTHREALM"
@@ -138,13 +138,13 @@ spec:
         - name: "MVC_ROUTING_BASEPATH"
           value: "{{ .Values.backend.services.basePath }}"
         - name: "PROVISIONING__CENTRALREALM"
-          value: "{{ .Values.backend.provisioning.centralRealm }}"
+          value: "{{ .Values.centralidp.realm }}"
         - name: "PROVISIONING__CENTRALREALMID"
           value: "{{ .Values.backend.provisioning.centralRealmId }}"
         - name: "SERVICES__APPROVESERVICENOTIFICATIONTYPEIDS__0"
           value: "{{ .Values.backend.services.approveServiceNotificationTypeIds.type0 }}"
         - name: "SERVICES__APPROVESERVICEUSERROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "SERVICES__APPROVESERVICEUSERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.approveServiceUserRoles.role0 }}"
         - name: "SERVICES__APPROVESERVICEUSERROLES__0__USERROLENAMES__1"
@@ -158,7 +158,7 @@ spec:
         - name: "SERVICES__USERMANAGEMENTADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.userManagementPath }}"
         - name: "SERVICES__CATENAADMINROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "SERVICES__CATENAADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.catenaAdminRoles.role0 }}"
         - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__0__DOCUMENTTYPEID"
@@ -178,29 +178,29 @@ spec:
         - name: "SERVICES__UPLOADSERVICEDOCUMENTTYPEIDS__2__MEDIATYPES__0"
           value: "{{ .Values.backend.services.uploadServiceDocumentTypeIds.mediaTypeIds2.mediaTypeId0 }}"
         - name: "SERVICES__ITADMINROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "SERVICES__ITADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.ITAdminRoles.role0 }}"
         - name: "SERVICES__ACTIVATIONUSERROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "SERVICES__ACTIVATIONUSERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.activationUserRoles.role0 }}"
         - name: "SERVICES__ACTIVATIONUSERROLES__0__USERROLENAMES__1"
           value: "{{ .Values.backend.services.activationUserRoles.role1 }}"
         - name: "SERVICES__SALESMANAGERROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "SERVICES__SALESMANAGERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.salesManagerRoles.role0 }}"
         - name: "SERVICES__SERVICEACCOUNTROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.technicalRolesManagement }}"
+          value: "{{ .Values.centralidp.clients.technicalRolesManagement }}"
         - name: "SERVICES__SERVICEACCOUNTROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.serviceAccountRoles.role0 }}"
         - name: "SERVICES__SERVICEMANAGERROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "SERVICES__SERVICEMANAGERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.serviceManagerRoles.role0 }}"
         - name: "SERVICES__SUBSCRIPTIONMANAGERROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "SERVICES__SUBSCRIPTIONMANAGERROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.subscriptionManagerRoles.role0 }}"
         - name: "SERVICES__SUBSCRIPTIONMANAGERROLES__0__USERROLENAMES__1"
@@ -230,7 +230,7 @@ spec:
         - name: "SERVICES__TECHNICALUSERPROFILECLIENT"
           value: "{{ .Values.backend.services.technicalUserProfileClient }}"
         - name: "SERVICES__COMPANYADMINROLES__0__CLIENTID"
-          value: "{{ .Values.backend.clients.portal }}"
+          value: "{{ .Values.centralidp.clients.portal }}"
         - name: "SERVICES__COMPANYADMINROLES__0__USERROLENAMES__0"
           value: "{{ .Values.backend.services.companyAdminRoles.role0 }}"
         - name: "MAILINGPROCESSCREATION__ENCRYPTIONCONFIGINDEX"
