chore: fix centralidp realm for frontend deployments follow up to https://github.com/eclipse-tractusx/portal/pull/217

--- a/charts/portal/templates/deployment-frontend-portal.yaml
+++ b/charts/portal/templates/deployment-frontend-portal.yaml
@@ -63,7 +63,7 @@ spec:
           - name: MANAGED_IDENTITY_WALLETS_NEW_URL
             value: "{{ .Values.custodianAddress }}"
           - name: REALM
-            value: "{{ .Values.backend.keycloak.authRealm }}"
+            value: "{{ .Values.centralidp.realm }}"
           - name: CLIENT_ID
             value: "{{ .Values.centralidp.clients.portal }}"
           - name: CLIENT_ID_SEMANTIC
